crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_feature-dependents.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The features that declare depends_on the feature, sorted by id.

Usage: specforge product feature-dependents [OPTIONS] <FEATURE>

Arguments:
  <FEATURE>
          The feature id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
