crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_feature-impact.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
What deferring or removing a feature touches: the journeys, milestones and modules that list it, the deliverables holding those journeys or modules, the features depending on it (transitively), and their total.

Usage: specforge product feature-impact [OPTIONS] <FEATURE>

Arguments:
  <FEATURE>
          The feature id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
