crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_feature-ordering.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
Every feature, dependencies before dependents, by priority within a level (none counts as medium), then by id; features on or behind a depends_on cycle come last, and the cycle's members are reported.

Usage: specforge product feature-ordering [OPTIONS]

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
