crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_features.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List features: each feature's id, title, status, priority, problem and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product features [OPTIONS]

Options:
      --status <STATUS>
          Only features with this status: proposed (also a feature without one), accepted, in_progress, done, deferred or deprecated
          
          [possible values: proposed, accepted, in_progress, done, deferred, deprecated]

      --priority <PRIORITY>
          Only features with this priority: critical, high, medium, low
          
          [possible values: critical, high, medium, low]

      --tags <TAGS>
          Only features with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a feature declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
