crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_health.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
A 0-100 score averaging coverage, connectivity and completeness of the product graph, with entity and unreferenced counts.

Usage: specforge product health [OPTIONS]

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
