crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_journey-coverage.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
How many of a journey's features are done, and the ones that are not.

Usage: specforge product journey-coverage [OPTIONS] <JOURNEY>

Arguments:
  <JOURNEY>
          The journey id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
