crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_milestone-timeline.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
Every milestone by target date, undated ones last, by id within a date; a milestone not completed whose target date is before --as-of (default today) is overdue.

Usage: specforge product milestone-timeline [OPTIONS]

Options:
      --as-of <AS_OF>
          The date to compare against, YYYY-MM-DD (default: today, UTC)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
