crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_milestone-velocity.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
A milestone's done, in-progress and remaining features, its completion, the days elapsed since its start date (or target date) as of --as-of (default today), features done per day and the days that pace leaves.

Usage: specforge product milestone-velocity [OPTIONS] <MILESTONE>

Arguments:
  <MILESTONE>
          The milestone id

Options:
      --as-of <AS_OF>
          The date to compare against, YYYY-MM-DD (default: today, UTC)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
